# lab-python-server

./: .dockerignore  .env.development  .env.development.template  .gitignore  Docker.worker-prod  Dockerfile  Dockerfile.api  Dockerfile.api-prod  Dockerfile.prod  Dockerfile.worker  LICENSE  README.md  Taskfile.prod.yml  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml  vector.toml
.github/workflows/: create-draft-release.yml
attic/: .dockerignore  Dockerfile.api
attic/api/: pyproject.toml
attic/api/labs/api/routers/: __init__.py
attic/core/labs/core/: __init__.py  config.py
attic/core/labs/core/models/: __init__.py
charts/labs/: Chart.yaml  values.yaml
charts/labs/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/labs/templates/tests/: test-connection.yaml
charts/worker/: Chart.yaml  values.yaml
charts/worker/templates/: deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
config/: traefik-dynamic.toml
docs/: COMPOSE-IN-PROD.md
k8s/: api-claim1-persistentvolumeclaim.yaml  api-deployment.yaml  api-service.yaml  createbuckets-deployment.yaml  db-deployment.yaml  db-service.yaml  env-development-configmap.yaml  lab-python-server-default-networkpolicy.yaml  minio-claim1-persistentvolumeclaim.yaml  minio-deployment.yaml  minio-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  redis-deployment.yaml  scheduler-deployment.yaml  worker-deployment.yaml
python-lab-chart/: Chart.yaml  values.yaml
python-lab-chart/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  beat-deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
python-lab-chart/templates/tests/: test-connection.yaml
src/: Dockerfile.api  README.rst  pyproject.toml
src/core/: pyproject.toml
src/labs/: __init__.py  alembic.ini  api.py  broker.py  celery.py  config.py  db.py  email.py  utils.py
src/labs/acts/: __init__.py
src/labs/acts/auth/: __init__.py
src/labs/acts/auth/scenes/: verify.py
src/labs/acts/auth/tasks/: __init__.py  email.py
src/labs/acts/ext/: __init__.py
src/labs/acts/ext/scenes/: __init__.py
src/labs/alembic/: env.py
src/labs/alembic/versions/: 07fbd5c2d677_refactor_moves_to_cud_model_for_object_.py  36c6f9571c8c_adds_reset_token_fields.py  4b2dfa16da8f_init_db.py  64e03973ea0f_adds_otp_fields.py  6b3a877ee8e4_drops_required_constraint_of_prefix.py  7fd060beb5c7_changes_optionality_of_various_fields.py  80836641fabc_makes_verification_expiry_a_timestamp.py  8129c9c5c175_rename_admin_field.py  818ec6ee5829_adds_verification_token.py  b9edd612a408_adds_s3_meta.py  bcc325226a11_drops_required_timestamp_value.py  c077dbfdeb0c_adds_user_table.py  c4cbcb7020fa_change_password_field_name.py  d8fb062b42d6_changes_for_s3_file_meta.py  f924d213939c_relaxes_rules_on_the_user_model.py
src/labs/api/: __init__.py
src/labs/api/routers/: __init__.py
src/labs/attic/api/: __init__.py
src/labs/attic/core/: __init__.py  celery.py
src/labs/attic/core/models/: user.py
src/labs/attic/worker/tasks/: __init__.py  void.py
src/labs/config/: __init__.py  ampq.py  api_router.py  apirouter.py  comms.py  lifetime.py  redis.py  s3.py
src/labs/core/: config.py
src/labs/core/db/: __init__.py
src/labs/dto/: __init__.py  upload.py  user.py
src/labs/models/: __init__.py  s3.py  user.py  utils.py
src/labs/routers/: __init__.py  utils.py
src/labs/routers/auth/: __init__.py  create.py  initiate.py  manage.py  otp.py  tasks.py  verify.py
src/labs/routers/ext/: __init__.py
src/labs/routers/stripe/: __init__.py
src/labs/routers/upload/: __init__.py  tasks.py
src/labs/routers/users/: __init__.py
src/labs/schema/: __init__.py  auth.py  ext.py  upload.py  user.py  utils.py
src/labs/settings/: __init__.py  amqp.py  api_router.py  comms.py  jwt.py  lifetime.py  postgres.py  redis.py  s3.py  verbosity.py
src/labs/settings/source/: aws.py
src/labs/tasks/: README.md  __init__.py  utils.py
src/labs/tasks/email/: __init__.py  verify_account.py
src/labs/tasks/otp/: __init__.py
src/labs/tasks/periodic/: __init__.py
src/labs/templates/html/: base.html  email_otp.html  email_reset_password_token.html  email_verify_account.html
src/labs/templates/txt/: email_otp.txt  email_reset_password_token.txt  email_verify_account.txt
src/labs/utils/: __init__.py  auth.py
src/labs/worker/: __init__.py
src/tests/: __init__.py  conftest.py  test_auth.py  test_ext.py  test_labs.py
