[tool.poetry]
name = "labs"
version = "0.1.0"
description = "A template for building Python based web applications"
authors = ["Dev Mukherjee <devraj@gmail.com>"]
repository = "https://github.com/anomaly/lab-python-server"
documentation = "https://anomaly.academy"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
uvicorn = "^0.23.2"
gunicorn = "^20.1.0"
websockets = "^10.4"
redis = "^4.6.0"
asyncpg = "^0.28.0"
gevent = "^23.9.1"
email-validator = "^2.0.0.post2"
pyotp = "^2.9.0"
redmail = "^0.6.0"
stripe = "^6.4.0"
clicksend-client = "^5.0.72"
minio = "^7.1.15"
bcrypt = "^4.0.1"
PyJWT = "^2.8.0"
python-multipart = "^0.0.5"
pytest = "^7.3.1"
pytz = "^2023.3"
httpx = "^0.25.0"
markupsafe = "^2.1.2"
pycron = "^3.0.0"
faker = "^18.11.2"
setuptools = "^68.0.0"
sqlalchemy = "^2.0.20"
fastapi = "^0.103.1"
alembic = "^1.12.0"
taskiq = {version = "^0.8.8", extras = ["reload"]}
taskiq-aio-pika = "^0.4.0"
taskiq-fastapi = "^0.3.0"
taskiq-redis = "^0.4.0"
pydantic-settings = "^2.0.2"
certifi = "^2023.7.22"
taskiq-dependencies = "^1.3.1"
pydantic = "^2.1.1"
pytest-env = "^1.0.1"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.8"

[tool.poetry.scripts]
initdb = "labs.db:initialise"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-order = "^1.1.0"
faker = "^18.6.0"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = ["ENV=pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
