[tool.poetry]
name = "labs"
version = "0.11.0"
description = "A template for building Python based web applications"
authors = ["Dev Mukherjee <devraj@gmail.com>"]
repository = "https://github.com/anomaly/lab-python-server"
documentation = "https://anomaly.academy"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
uvicorn = "^0.30.1"
gunicorn = "^23.0.0"
websockets = "^12.0"
redis = "^4.6.0"
asyncpg = "^0.29.0"
gevent = "^23.9.1"
email-validator = "^2.1.0.post1"
pyotp = "^2.9.0"
redmail = "^0.6.0"
stripe = "^10.2.0"
clicksend-client = "^5.0.72"
minio = "^7.2.7"
bcrypt = "^4.1.2"
PyJWT = "^2.8.0"
python-multipart = "^0.0.7"
pytest = "^7.4.4"
pytz = "^2024.1"
httpx = "^0.27.0"
markupsafe = "^2.1.2"
pycron = "^3.0.0"
faker = "^18.11.2"
setuptools = "^70.0.0"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
alembic = "^1.13.1"
taskiq = {version = "^0.11.3", extras = ["reload"]}
taskiq-aio-pika = "^0.4.0"
taskiq-fastapi = "^0.3.1"
taskiq-redis = "^0.4.0"
pydantic-settings = "^2.0.3"
certifi = "^2024.7.4"
taskiq-dependencies = "^1.4.2"
pydantic = "^2.1.1"
pytest-env = "^1.1.3"
aio-pika = "^9.4.1"
gitignore-parser = "^0.1.9"
click = "^8.1.7"
dnspython = "^2.6.1"
annotated-types = "^0.6.0"
pytest-order = "^1.2.0"
jinja2 = "^3.1.4"
tzdata = "^2023.4"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.8"

[tool.poetry.scripts]
initdb = "labs.db:initialise"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-order = "^1.1.0"
faker = "^18.6.0"
coverage = "^7.5.1"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = ["ENV=pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
