[tool.poetry]
name = "core"
version = "0.1.0"
description = "Application core"
authors = ["Anomaly Software"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.36"
pydantic = "^1.9.1"
alembic = "^1.7.7"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
